# notmuch-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: config_list.rs  config_pairs.rs  config_values.rs  database.rs  directory.rs  error.rs  ffi.rs  filenames.rs  index.rs  index_opts.rs  lib.rs  macros.rs  message.rs  message_properties.rs  messages.rs  query.rs  tags.rs  thread.rs  threads.rs  utils.rs
tests/: commands.rs  fixtures.rs  lib.rs  main.rs  test_config.rs  test_database.rs  test_message.rs  test_query.rs  test_tags.rs  test_thread.rs
