[package]
name = "notmuch"
version = "0.4.2"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
homepage = "https://github.com/vhdirk/notmuch-rs"
repository = "https://github.com/vhdirk/notmuch-rs"
description = "Rust interface and bindings for notmuch"
license = "GPL-3.0+"
readme = "README.md"

[badges]
travis-ci = { repository = "vhdirk/notmuch-rs" }

[dependencies]
libc = "0.2"
clippy = { version = "0.0.193", optional = true }
supercow = "0.1.0"

[dev-dependencies]
dirs = "1.0"

[features]
v0_21 = []
v0_26 = ["v0_21"]
default = ["v0_26"]


[[test]]
name = "main"
harness = false
