[package]
name = "notmuch"
version = "0.8.0"
authors = ["Dirk Van Haerenborgh <vhdirk@gmail.com>"]
homepage = "https://github.com/vhdirk/notmuch-rs"
repository = "https://github.com/vhdirk/notmuch-rs"
description = "Rust interface and bindings for notmuch"
license = "GPL-3.0+"
readme = "README.md"
keywords = ["email", "notmuch"]
autotests = false

[badges]
travis-ci = { repository = "vhdirk/notmuch-rs" }

[dependencies]
libc = "0.2"
# clippy = { version = "0.0.211", optional = true }
from_variants = "0.6.0"

[dev-dependencies]
dirs = "1.0"
tempfile = "3"
gethostname = "0.2.0"
maildir = "0.3.2"
lettre = "0.9.2"
lettre_email = "0.9.2"

[features]
v0_21 = []
v0_26 = ["v0_21"]
v0_32 = ["v0_26"]
default = ["v0_32"]

[[test]]
name = "tests"
path = "tests/lib.rs"
harness = true
